objects/Advocacy_Goal__c.object
<CustomObject>
    <description>Use this area to record Advocacy Goals, examples include engaging goals with MPs, Think Tanks and Journalists</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box used to indicate whether an Advocacy Goal has been achieved.</description>
        <inlineHelpText>Tick this box if you have achieved this goal</inlineHelpText>
        <label>Achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>This field is to create a Master-Detail relationship between an Advocacy Goal and a Contact</description>
        <inlineHelpText>In this box, attach the contact for which this Advocacy Goal applies to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advocacy Goals</relationshipLabel>
        <relationshipName>Advocacy_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <defaultValue>Today()+180</defaultValue>
        <description>This is the deadline set by the user for which the Advocacy Goal should aimed to be achieved by</description>
        <inlineHelpText>Set the date by which you wish for this Advocacy Goal to be achieved by</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>This is a picklist which relates to possible Advocacy Goals</description>
        <inlineHelpText>Choose one Advocacy Goal which you are pursuing for this Contact</inlineHelpText>
        <label>Goal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feature TCN in report/publication</fullName>
                </value>
                <value>
                    <fullName>Support commission</fullName>
                </value>
                <value>
                    <fullName>Supportive of NCS</fullName>
                </value>
                <value>
                    <fullName>Write about social division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Advocacy Goal</label>
    <nameField>
        <displayFormat>AG-{0000}</displayFormat>
        <label>Advocacy Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advocacy Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>